fix aos.js to avoid using fade-left for correct mobile spacing

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -486,7 +486,8 @@ footer p {
 
 @media only screen and (max-width: 768px) {
 
-    body {
+    .aos-wrapper {
+        position: relative;
         overflow-x: hidden;
     }
     
